// Copyright (C) 2023  mieru authors
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package appctl;

option go_package = "github.com/enfein/mieru/pkg/appctl/appctlpb";

enum ProxyProtocol {
    UNKNOWN_PROXY_PROTOCOL = 0;
    SOCKS5 = 1;
}

message EgressItem {
    // A list of CIDR to match the rule.
    // Use "*" to match all IP addresses.
    repeated string ipRanges = 1;

    // A list of domain names to match the rule.
    // Use "*" to match all domain names.
    repeated string domainNames = 2;

    optional ProxyProtocol proxyProtocol = 3;
    optional string proxyHost = 4;
    optional int32 proxyPort = 5;
}
