// Copyright (C) 2021  mieru authors
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package appctl;

option go_package = "github.com/enfein/mieru/pkg/appctl/appctlpb";

message User {

    // User name is also the ID of user.
    // Typically this is an email address.
    optional string name = 1;

    // Raw password.
    // For safety this shouldn't be persisted at the server side.
    optional string password = 2;

    // Hashed password.
    // Stored with hex encoding.
    optional string hashedPassword = 3;
}
